BDZ-19 map providers in env-manager
+ update spec
+ fix path handling in attachments and mounting
+ add configuration for providers
+ add kinds to attachments
