# src/appmanager/api.py
@@ -5,6 +5,8 @@ from aiohttp.web_urldispatcher import UrlDispatcher
 from common.entities import App
 from common.upload import FIELD_FILENAME, accept_upload
 from common.versioning import VersionedAPI
+from config import SHARED_FS_MOUNT_PATH, SHARED_STORAGE_FILE_PATH_TPL
+from container_manager import AttachmentPrefix
 from microcore.entity.encoders import json_response
 
 
@@ -21,7 +23,7 @@ class ApplicationManagerAPI(VersionedAPI):
     @json_response
     async def upload(self, request: Request):
         app: App = await self._get(request)
-        meta = await accept_upload(request)
-        app.attachment = meta[FIELD_FILENAME]
+        meta = await accept_upload(request, path_tpl=SHARED_STORAGE_FILE_PATH_TPL)
+        app.attachment = AttachmentPrefix.File.value + meta[FIELD_FILENAME].replace(SHARED_FS_MOUNT_PATH, '')
         await self.repository.save(app)
         return meta
